k8s/shanghai/canary/deployment-canary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: shprod
  name: table-search-prod-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: table-search-prod-canary
      version: v2
  template:
    metadata:
      labels:
        app: table-search-prod-canary
        version: v2
    spec:
      imagePullSecrets:
        - name: registry-ali-hangzhou
      containers:
        - name: table-search-prod-canary
          image: crpi-hytqalx0cm8oqxr4.cn-hangzhou.personal.cr.aliyuncs.com/mxrag/table-search-prod:20250920142148
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "32Mi"
            limits:
              cpu: "1000m"
              memory: "2048Mi"
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 120
