k8s/shanghai/canary/service-canary.yml
apiVersion: v1
kind: Service
metadata:
  name: mytestapp-prod-service-canary
  namespace: shprod
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: mytestapp-prod-canary
    version: v2
  sessionAffinity: None
  type: ClusterIP
