k8s/shanghai/canary/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/canary: "true"
    alb.ingress.kubernetes.io/canary-by-header: X-Canary
    alb.ingress.kubernetes.io/canary-by-header-value: grey
    alb.ingress.kubernetes.io/order: "1"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'
  labels:
    ingress-controller: alb
  name: mytestapp-prod-ingress-canary
  namespace: shprod
spec:
  ingressClassName: alb
  rules:
    - host: mytestapp.qiewenpaper.com
      http:
        paths:
          - backend:
              service:
                name: mytestapp-prod-service-canary
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - mytestapp.qiewenpaper.com
      secretName: tls-qiewenpaper.com
